<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sliding Up Panel Demo</string>
    <string name="action_settings">Settings</string>
    <string name="action_hide">Hide Panel</string>
    <string name="action_show">Show Panel</string>
    <string name="action_anchor_enable">Enable Anchor Point</string>
    <string name="action_anchor_disable">Disable Anchor Point</string>
    <string name="hello"><![CDATA[<b>The Awesome Sliding Up Panel</b><br/> Brought to you by<br/><a href="https://github.com/hannesa2/AndroidSlidingUpPanel">https://github.com/hannesa2/AndroidSlidingUpPanel</a>]]></string>
    <string name="follow"><![CDATA[Follow it<br/>on <a href="https://github.com/hannesa2/AndroidSlidingUpPanel">Github</a>]]></string>
</resources>
